<?xml version="1.0" encoding="utf-8"?>
<resources>




//SIGN IN PAGE
    <string name="app_name">Ämbi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="subtitle">New-age Tutoring</string>

//SIGN UP PAGE
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="your_info_title">Your Information</string>
    <string name="name_hint">First Name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="your_login_info_title">Your Log In Information</string>
    <string name="edu_email_hint">Email (.edu address required)</string>
    <string name="password_create_hint">Create a password</string>

//EDIT PROFILE PAGE
    <string name="title_activity_edit_basic_profile">EditBasicProfile</string>
    <string name="change_name">name</string>
    <string name="change_major">major</string>
    <string name="email_placeholder">kinneerd@appstate.edu</string>
    <string name="edit_description">tell us about yourself…</string>

    <string name="apply_button">Apply</string>



    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="hello_world">Hello, World!</string>



//ERRORS
    <string name="signup_error_message">Please make sure you fill out all fields!</string>
    <string name="signup_error_title">Oops!</string>


//IMAGE CONTENT DESCRIPTIONs
    <string name = "default_profile_image">default profile image</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

// DESCRIPTION
    <string name = "filler">I am the best at what I do. I am the best snowboarder, slackliner, and rock climber you
    will ever meet. </string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_sign_up_tutor">SignUpTutorActivity</string>

</resources>
