<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dan.tute.SignUpActivity"
    android:background="@color/ColorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_info_title"
        android:id="@+id/yourSignUpInfo"
        android:textColor="@android:color/white"
        android:layout_above="@+id/yourInfoLayout"
        android:layout_alignLeft="@+id/yourInfoLayout"
        android:layout_alignStart="@+id/yourInfoLayout" />

    <LinearLayout
        android:id="@+id/yourInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sign_up_your_info_horizontal_padding"
        android:paddingRight="@dimen/sign_up_your_info_horizontal_padding"
        android:paddingBottom="@dimen/sign_up_your_info_vertical_padding"
        android:background="@android:color/white"
        android:paddingTop="@dimen/sign_up_your_info_vertical_margin"
        android:layout_above="@+id/yourLoginInfo"
        android:layout_alignLeft="@+id/yourLoginInfo"
        android:layout_alignStart="@+id/yourLoginInfo"
        android:layout_alignRight="@+id/yourLoginInfoLayout"
        android:layout_marginBottom="45dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameField"
            android:hint="@string/name_hint" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_login_info_title"
        android:id="@+id/yourLoginInfo"
        android:layout_above="@+id/yourLoginInfoLayout"
        android:layout_alignParentStart="false"
        android:textColor="@android:color/white"
        android:layout_alignStart="@id/yourLoginInfoLayout" />

    <LinearLayout
        android:id="@+id/yourLoginInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sign_up_your_login_info_horizontal_padding"
        android:paddingRight="@dimen/sign_up_your_login_info_horizontal_padding"
        android:paddingTop="@dimen/sign_up_your_login_info_vertical_margin"
        android:paddingBottom="@dimen/sign_up_your_login_info_vertical_padding"
        android:background="@android:color/white"
        android:layout_above="@+id/signupButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:hint="@string/edu_email_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_create_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/text_color"/>

</RelativeLayout>
